# boa

./: .gitignore  .pre-commit-config.yaml  README.md  SLURM_TRAINING.md  environment.yaml  pyproject.toml  requirements.txt  requirements2.txt  setup.py  train_wrapper.py
.github/workflows/: code-quality.yaml
boa/: new_test.py  test.py  train.py
boa/data/: basis_info.py  dataloader.py  datamodule.py  dataset.py  generate_qmugs_xyzs.py  of_batch.py  of_data.py  overlap_matrix.py  transforms.py
boa/model/: gtos.py  module.py
boa/utils/: omegaconf_resolvers.py
configs/: test.yaml  train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/data/: md.yaml  qm9.yaml  qm9_gkc.yaml  qm9_gkc_small.yaml  qm9_pyscf.yaml  qm9_pyscf_small.yaml  qm9_small.yaml  qm9_vasp.yaml  qm9_vasp_slurm.yaml  qm9_vasp_small.yaml  qm9_vasp_small_etb.yaml
configs/debug/: debug_slurm.yaml  slurm.yaml
configs/eval/: benzene.yaml  ethane.yaml  ethanol.yaml  malonaldehyde.yaml  md.yaml  phenol.yaml  qm9_pyscf.yaml  qm9_pyscf_small.yaml  qm9_pyscf_small_small_cutoff.yaml  qm9_vasp.yaml  qm9_vasp_small.yaml  qm9_vasp_small_gth_basis.yaml  qm9_vasp_small_large_cutoff.yaml  qm9_vasp_small_linear_basis.yaml  resorcinol.yaml  (+6 more)
notebooks/: analyze_error.ipynb  check_qmugs_xyzs.ipynb  check_unit.ipynb  edge_centered_basis_products_2d.ipynb  equivariance_test.ipynb  eval.ipynb  eval_basis_sets.ipynb  eval_qmugs.ipynb  message_passing_1d.ipynb  plot_bonds.ipynb  plot_bonds_qm9.ipynb  plot_bonds_uncommented_qmugs_style.ipynb  plot_gaussians.ipynb  qmugs_nested_isosurface.ipynb  test_split_small.json  visualize_neurop_message_passing.ipynb  viz_message_passing.ipynb
scdp/: requirements.txt
sciai-dft/: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  environment_cpu.yaml  pyproject.toml  requirements.txt  setup.py
scripts/: convert_to_split_json  create_test_split.py
slurm/: sweep.sh  train.sh  train_no_copy.sh  train_no_copy_debug.sh
tests/: test_train.py
(+103 files in other folders)
